--- a/website/Gemfile
+++ b/website/Gemfile
@@ -19,6 +19,12 @@ gem 'dotenv-rails', '~> 2.1.0'
 
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
+
+  gem 'database_cleaner', github: 'DatabaseCleaner/database_cleaner',
+                          branch: 'master', ref: 'f318781a77228f5999f5f2371c12f59089c141f3',
+                          require: false
+  gem 'factory_girl_rails', '~> 4.6.0', require: false
+  gem 'ffaker', '~> 2.2.0', require: false
 end
 
 group :development do
