--- a/website/Gemfile
+++ b/website/Gemfile
@@ -17,6 +17,8 @@ gem 'puma', '~> 3.0.2', require: false
 
 gem 'dotenv-rails', '~> 2.1.0'
 
+gem 'config', '~> 1.1.0'
+
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
 
@@ -25,6 +27,8 @@ group :development, :test do
                           require: false
   gem 'factory_girl_rails', '~> 4.6.0', require: false
   gem 'ffaker', '~> 2.2.0', require: false
+
+  gem 'pry-rails', '~> 0.3.4'
 end
 
 group :development do
