--- a/website/Gemfile
+++ b/website/Gemfile
@@ -19,10 +19,14 @@ gem 'dotenv-rails', '~> 2.1.0'
 
 gem 'config', '~> 1.1.0'
 
+gem 'rails-i18n', '~> 5.0.0.beta3'
+
 gem 'nokogiri', '~> 1.6.8.rc3' #gpgme and nokogiri require conflict
 gem 'gpgme', '~> 2.0.12'
-gem 'devise', '4.0.0.rc2'
 
+gem 'devise', '~> 4.0.0.rc2'
+gem 'devise-i18n', '~> 1.0.1'
+gem 'attr_encrypted', '~> 3.0.1'
 gem 'devise-two-factor', github: 'colorfulberry/devise-two-factor',
                          branch: 'devise-4', ref: 'fc93fb4a7a171d4ae1bfc055b29fc95574a18106'
 
