--- a/website/Gemfile
+++ b/website/Gemfile
@@ -26,9 +26,13 @@ gem 'gpgme', '~> 2.0.12'
 
 gem 'devise', '~> 4.0.0.rc2'
 gem 'devise-i18n', '~> 1.0.1'
+gem 'devise-bootstrap-views', '~> 0.0.8'
+
 gem 'attr_encrypted', '~> 3.0.1'
 gem 'devise-two-factor', github: 'colorfulberry/devise-two-factor',
                          branch: 'devise-4', ref: 'fc93fb4a7a171d4ae1bfc055b29fc95574a18106'
+
+gem 'bootstrap', '~> 4.0.0.alpha3'
 
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
