--- a/website/Gemfile
+++ b/website/Gemfile
@@ -46,6 +46,12 @@ group :development, :test do
   gem 'ffaker', '~> 2.2.0', require: false
 
   gem 'pry-rails', '~> 0.3.4'
+
+  gem 'rspec', '~> 3.5.0.beta3', require: false
+  gem 'rspec-rails', '~> 3.5.0.beta3', require: false
+
+  gem 'guard', '~> 2.13', require: false
+  gem 'guard-rspec', '~> 4.6.5', require: false
 end
 
 group :development do
@@ -58,8 +64,6 @@ group :development do
 end
 
 group :test do
-  gem 'rspec-rails', '~> 3.5.0.beta3', require: false
-
   gem 'capybara', '~> 2.6.2', require: false
 end
 
