--- a/website/Gemfile
+++ b/website/Gemfile
@@ -36,6 +36,10 @@ gem 'switch_user', '~> 1.2.1'
 
 gem 'activevalidators', '~> 3.0.0'
 
+gem 'enumerize', '~> 1.1.1'
+
+gem 'pundit', '~> 1.1.0'
+
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
 
