--- a/website/Gemfile
+++ b/website/Gemfile
@@ -40,6 +40,8 @@ gem 'enumerize', '~> 1.1.1'
 
 gem 'pundit', '~> 1.1.0'
 
+gem 'sshkey', '~> 1.8.0'
+
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
 
