--- a/website/Gemfile
+++ b/website/Gemfile
@@ -42,6 +42,8 @@ gem 'pundit', '~> 1.1.0'
 
 gem 'sshkey', '~> 1.8.0'
 
+gem 'simple_form', '~> 3.2.1'
+
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
 
