--- a/website/Gemfile
+++ b/website/Gemfile
@@ -29,8 +29,8 @@ gem 'devise-i18n', '~> 1.0.1'
 gem 'devise-bootstrap-views', '~> 0.0.8'
 
 gem 'attr_encrypted', '~> 3.0.1'
-gem 'devise-two-factor', github: 'colorfulberry/devise-two-factor',
-                         branch: 'devise-4', ref: 'fc93fb4a7a171d4ae1bfc055b29fc95574a18106'
+gem 'devise-two-factor', github: 'tinfoil/devise-two-factor',
+                         branch: 'devise-4'
 
 gem 'switch_user', '~> 1.2.1'
 
