--- a/website/Gemfile
+++ b/website/Gemfile
@@ -73,6 +73,7 @@ end
 
 group :test do
   gem 'capybara', '~> 2.6.2', require: false
+  gem 'selenium-webdriver', '~> 2.53', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
