--- a/website/Gemfile
+++ b/website/Gemfile
@@ -44,6 +44,10 @@ gem 'sshkey', '~> 1.8.0'
 
 gem 'simple_form', '~> 3.2.1'
 
+gem 'kaminari', github: 'amatsuda/kaminari',
+              branch: 'master', ref: '9d66373b4f3123c3ebc7fc79ad15dbdc8c82ac0c'
+gem 'kaminari-i18n', '~> 0.4.0'
+
 group :development, :test do
   gem 'byebug', '~> 8.2.2'
 
