--- a/website/Gemfile
+++ b/website/Gemfile
@@ -15,7 +15,8 @@ gem 'jbuilder', '~> 2.4.1'
 
 gem 'puma', '~> 3.0.2', require: false
 
-gem 'dotenv-rails', '~> 2.1.0'
+# pre remove
+# gem 'dotenv-rails', '~> 2.1.0'
 
 gem 'config', '~> 1.1.0'
 
