feat: add spec and host and assigned hosts to acccount

--- a/website/.gitignore
+++ b/website/.gitignore
@@ -24,6 +24,7 @@
 /.ruby-gemset
 /.rvmrc
 /.versions.conf
+/.env
 
 # Ignore for gem https://github.com/railsconfig/config
 config/settings.local.yml
