--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -2,6 +2,26 @@
 - name: Build development system
   hosts: all
   become: true
+
+  pre_tasks:
+    - name: 'create $rvm_path/user'
+      file: "path='{{ rvm1_install_path }}/user' state=directory"
+      tags: ruby
+
+    - name: 'touch $rvm_path/user/db'
+      file: "path='{{ rvm1_install_path }}/user/db' state=touch"
+      tags: ruby
+
+    - name: 'insert $rvm_path/user/db'
+      lineinfile: "dest={{ rvm1_install_path }}/user/db state=present regexp='^{{ item.key }}=' line='{{ item.key }}={{ item.val }}'"
+      with_items:
+        - {key: 'ruby_url', val: 'https://ruby.taobao.org/mirrors/ruby/'}
+      tags: ruby
+
+    - name: 'replace sources.list'
+      template: "src=ubuntu-14.04_163_sources.list.j2 dest=/etc/apt/sources.list"
+      tags: system
+
   roles:
     - role: ssh_bastion.system_basic
       tags: system
@@ -31,6 +51,9 @@
       tags: redis
       redis_bind: 127.0.0.1
 
+    - role: geerlingguy.nodejs
+      tags: nodejs
+
     - role: rvm_io.rvm1-ruby
       tags: ruby
       rvm1_rubies:
@@ -38,5 +61,4 @@
       rvm1_rvm_check_for_updates: false
       rvm1_gpg_key_server: pgp.mit.edu
 
-    - role: geerlingguy.nodejs
-      tags: nodejs
+
