--- a/ansible/roles/ssh_bastion.system_basic/tasks/apt.yml
+++ b/ansible/roles/ssh_bastion.system_basic/tasks/apt.yml
@@ -1,8 +1,8 @@
 ---
-- name: Update apt cache
+- name: Run 'apt-get update'
   apt: update_cache=yes
 
-- name: Upgrade system
+- name: Update all packages
   apt: upgrade=dist
 
 - name: Install basic packages
@@ -15,8 +15,8 @@
     - unzip
     - imagemagick
     - libmagickwand-dev
-    - libxslt-dev
     - libxml2-dev
+    - libxslt-dev
     - git
     - curl
     - monit
