--- a/vagrant/ubuntu-14.04/Vagrantfile.example
+++ b/vagrant/ubuntu-14.04/Vagrantfile.example
@@ -80,7 +80,7 @@ Vagrant.configure(2) do |config|
     ansible.verbose = "v"
     ansible.playbook = "../../ansible/playbook_dev.yml"
     ansible.raw_arguments  = [
-      '--tags=ruby'
+      # '--tags=ruby'
     ]
   end
 
