--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -28,12 +28,12 @@
       when: (ansible_os_family == 'Debian') and (ansible_distribution_version == '14.04') and (in_China == True)
       tags: system
 
-    - name: 'Run apt-get update'
+    - name: 'Update apt cache (Debian)'
       apt: update_cache=yes
       when: ansible_os_family == 'Debian'
       tags: system
 
-    - name: 'Update all packages'
+    - name: 'Upgrade all packages (Debian)'
       apt: upgrade=dist
       when: ansible_os_family == 'Debian'
       tags: system
