--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -19,5 +19,8 @@
 - src: https://github.com/geerlingguy/ansible-role-git
   name: geerlingguy.git
 
+- src: https://github.com/geerlingguy/ansible-role-ruby
+  name: geerlingguy.ruby
+
 - src: https://github.com/rvm/rvm1-ansible
   name: rvm_io.rvm1-ruby
