--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -6,36 +6,22 @@
     - vars/main.yml
 
   pre_tasks:
-    - name: 'create $rvm_path/user'
-      file: "path='{{ rvm1_install_path }}/user' state=directory"
-      when: in_China == True
-      tags: ruby
-
-    - name: 'touch $rvm_path/user/db'
-      file: "path='{{ rvm1_install_path }}/user/db' state=touch"
-      when: in_China == True
-      tags: ruby
-
-    - name: 'insert $rvm_path/user/db'
-      lineinfile: "dest={{ rvm1_install_path }}/user/db state=present regexp='^{{ item.key }}=' line='{{ item.key }}={{ item.val }}'"
-      with_items:
-        - {key: 'ruby_url', val: 'https://ruby.taobao.org/mirrors/ruby'}
-      when: in_China == True
-      tags: ruby
-
     - name: 'Replace sources.list'
       copy: "dest=/etc/apt/sources.list backup=true src=files/ubuntu-14.04_sohu_sources.list"
-      when: (ansible_os_family == 'Debian') and (ansible_distribution_version == '14.04') and (in_China == True)
+      when: (in_China == True) and (ansible_os_family == 'Debian') and (ansible_distribution_version == '14.04')
+      run_once: True
       tags: system
 
     - name: 'Update apt cache (Debian)'
       apt: update_cache=yes
       when: ansible_os_family == 'Debian'
+      run_once: True
       tags: system
 
     - name: 'Upgrade all packages (Debian)'
       apt: upgrade=dist
       when: ansible_os_family == 'Debian'
+      run_once: True
       tags: system
 
   roles:
@@ -69,11 +55,21 @@
       redis_port: 6379
       redis_bind_interface: 127.0.0.1
 
-    - role: rvm_io.rvm1-ruby
+    - role: geerlingguy.ruby
       tags: ruby
-      rvm1_rubies:
-        - '2.2.2'
-      rvm1_gpg_key_server: pgp.mit.edu
+      ruby_install_from_source: True
+      ruby_version: 2.2.2
+      ruby_install_gems: ['bundler']
+      ruby_download_url: https://ruby.taobao.org/mirrors/ruby/2.2/ruby-2.2.2.tar.gz
+      when: in_China == True
+
+    - role: geerlingguy.ruby
+      tags: ruby
+      ruby_install_from_source: True
+      ruby_version: 2.2.2
+      ruby_install_gems: ['bundler']
+      ruby_download_url: http://cache.ruby-lang.org/pub/ruby/2.2/ruby-2.2.2.tar.gz
+      when: in_China == False
 
     - role: geerlingguy.nodejs
       tags: nodejs
