--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -10,19 +10,16 @@
     - name: 'Replace sources.list'
       copy: "dest=/etc/apt/sources.list backup=true src=files/ubuntu-14.04_sohu_sources.list"
       when: (ansible_os_family == 'Debian') and (ansible_distribution_version == '14.04')
-      run_once: True
       tags: system
 
     - name: 'Update apt cache (Debian)'
       apt: update_cache=yes
       when: ansible_os_family == 'Debian'
-      run_once: True
       tags: system
 
     - name: 'Upgrade all packages (Debian)'
       apt: upgrade=dist
       when: ansible_os_family == 'Debian'
-      run_once: True
       tags: system
 
   roles:
@@ -54,17 +51,36 @@
 
     - role: geerlingguy.redis
       tags: redis
-      redis_port: "{{ redis.port }}"
+      redis_port: '127.0.0.1'
       redis_bind_interface: "{{ redis.host }}"
 
     - role: geerlingguy.ruby
       tags: ruby
       ruby_install_from_source: True
       ruby_version: 2.2.2
-      ruby_install_gems: ['bundler']
       # ruby_download_url: http://cache.ruby-lang.org/pub/ruby/2.2/ruby-2.2.2.tar.gz
       ruby_download_url: https://ruby.taobao.org/mirrors/ruby/2.2/ruby-2.2.2.tar.gz
 
     - role: geerlingguy.nodejs
       tags: nodejs
       nodejs_forever: False
+
+    - role: vkill.ssh_bastion_host
+      tags: bastion_host
+
+  tasks:
+    - name: 'Replace gem source without become'
+      shell: gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/
+      become: False
+
+    - name: 'Replace gem source with become'
+      shell: gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/
+      become: True
+
+    - name: 'Replace bundle source without become'
+      shell: bundle config mirror.https://rubygems.org https://gems.ruby-china.org
+      become: False
+
+    - name: 'Replace bundle source with become'
+      shell: bundle config mirror.https://rubygems.org https://gems.ruby-china.org
+      become: True
