--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -89,3 +89,15 @@
       become: True
       tags: ruby
 
+    - name: 'Replace npm registry without become'
+      shell: npm config set registry https://registry.npm.taobao.org
+      become: False
+      tags: nodejs
+
+    - name: 'Replace npm registry with become'
+      shell: npm config set registry https://registry.npm.taobao.org
+      become: True
+      tags: nodejs
+
+
+
