--- a/ansible/roles/vkill.ssh_bastion_host/defaults/main.yml
+++ b/ansible/roles/vkill.ssh_bastion_host/defaults/main.yml
@@ -1,7 +1,12 @@
 ---
 
+ssh_keys_sshdir: '.ssh'
+ssh_keys_private_key_filename: 'id_rsa'
+ssh_keys_public_key_filename: 'id_rsa.pub'
+
 # Users
 ssh_bastion_host_users: []
-#   - name: dev
+#   - user: dev
+#     group: dev
 #     ssh_public_key:
 #     ssh_private_key:
