--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -26,4 +26,4 @@
   name: rvm_io.rvm1-ruby
 
 - src: https://github.com/willshersystems/ansible-sshd
-  name: mattwillsher.sshd
+  name: willshersystems.sshd
