--- a/ansible/vars/settings_dev.yml.example
+++ b/ansible/vars/settings_dev.yml.example
@@ -17,7 +17,18 @@ smtp:
   host: 127.0.0.1
   port: 25
 
+
+# e.g.
+#
+# local_bastion_host:
+#   user_name: developer
+#
+# local_bastion_host:
+#   user_name: developer
+#   user_ssh_private_key_file: 'files/id_rsa-default'
+#   user_ssh_public_key_file: 'files/id_rsa-default.pub'
+#
 local_bastion_host:
   user_name: developer
-  user_ssh_public_key: ''
-  user_ssh_private_key: ''
+  user_ssh_private_key_file: 'files/id_rsa-default'
+  user_ssh_public_key_file: 'files/id_rsa-default.pub'
