--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -69,8 +69,8 @@
       tags: bastion_host
       ssh_bastion_host_users:
         - name: "{{ local_bastion_host.user_name }}"
-          ssh_public_key: "{{ local_bastion_host.user_ssh_public_key }}"
-          ssh_private_key: "{{ local_bastion_host.user_ssh_private_key }}"
+          ssh_public_key_file: "{{ local_bastion_host.user_ssh_public_key_file }}"
+          ssh_private_key_file: "{{ local_bastion_host.user_ssh_private_key_file }}"
 
   tasks:
     - name: 'Replace gem source without become'
