--- a/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
+++ b/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
@@ -2,6 +2,6 @@
 
 ssh_key_type: 'rsa'
 ssh_key_path: '.ssh'
-ssh_key_private_file: 'id_rsa'
-ssh_key_public_file: 'id_rsa.pub'
+ssh_private_key_file: 'id_rsa'
+ssh_public_key_file: 'id_rsa.pub'
 
