--- a/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
+++ b/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
@@ -1,16 +1,18 @@
 ---
+ssh_key_prefix: "id_rsa"
 
-ssh_key_type: 'rsa'
-ssh_key_path: '.ssh'
-ssh_key_private_file: 'id_rsa'
-ssh_key_public_file: 'id_rsa.pub'
+ssh_key_type: "rsa"
+ssh_key_path: ".ssh"
+
+ssh_key_private_file: "{{ ssh_key_prefix }}"
+ssh_key_public_file: "{{ ssh_key_prefix }}.pub"
 
 #
 #
 
 gpg2_key_prefix: "gpg2_ssh_bastion"
 
-gpg2_key_path: '.gnupg'
+gpg2_key_path: ".gnupg"
 
 gpg2_key_private_file_name: "{{ gpg2_key_prefix }}.priv"
 gpg2_key_public_file_name: "{{ gpg2_key_prefix }}.pub"
