--- a/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
+++ b/ansible/roles/vkill.ssh_bastion_host/vars/main.yml
@@ -16,6 +16,7 @@ gpg2_key_path: ".gnupg"
 
 gpg2_key_private_file_name: "{{ gpg2_key_prefix }}.priv"
 gpg2_key_public_file_name: "{{ gpg2_key_prefix }}.pub"
+gpg2_key_public_asc_file_name: "{{ gpg2_key_prefix }}.pub.asc"
 
 gpg2_key_fingerprint_file_name: "{{ gpg2_key_prefix }}.fingerprint"
 
