--- a/vagrant/ubuntu-14.04/Vagrantfile.example
+++ b/vagrant/ubuntu-14.04/Vagrantfile.example
@@ -19,7 +19,7 @@ Vagrant.configure(2) do |config|
     ansible.verbose = "v"
     ansible.playbook = "../../ansible/playbook_dev.yml"
     ansible.raw_arguments  = [
-      '--tags=bastion_host'
+      '--tags=bastion_host,website_host,remote_host'
     ]
   end
 
