--- a/ansible/roles/vkill.gpg2_key/tasks/gpg2_key.yml
+++ b/ansible/roles/vkill.gpg2_key/tasks/gpg2_key.yml
@@ -51,7 +51,7 @@
   become_user: "{{ gpg2_user }}"
 
 - name: Generate secret key public ASCII file
-  shell: "gpg --armor --output ~/{{ gpg2_path }}/{{ gpg2_key_public_asc_file }} --export {{ gpg2_key_unique_uid }}"
+  shell: "gpg --armor --export {{ gpg2_key_unique_uid }} > ~/{{ gpg2_path }}/{{ gpg2_key_public_asc_file }}"
   changed_when: false
   become: yes
   become_user: "{{ gpg2_user }}"
