--- a/vagrant/ubuntu-14.04/Vagrantfile.example
+++ b/vagrant/ubuntu-14.04/Vagrantfile.example
@@ -4,7 +4,12 @@ Vagrant.configure(2) do |config|
 
   config.vm.box_url = "trusty-server-cloudimg-amd64-vagrant-disk1.box"
 
+  # puma
   config.vm.network "forwarded_port", guest: 3000, host: 3000
+  # mailhog ui
+  config.vm.network "forwarded_port", guest: 8025, host: 8025
+  # mailhog smtp
+  config.vm.network "forwarded_port", guest: 1025, host: 1025
 
   config.vm.network "public_network"
 
@@ -19,7 +24,7 @@ Vagrant.configure(2) do |config|
     ansible.verbose = "v"
     ansible.playbook = "../../ansible/playbook_dev.yml"
     ansible.raw_arguments  = [
-      '--tags=bastion_host,website_host,remote_host'
+      '--tags=website_host'
     ]
   end
 
