--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -105,6 +105,7 @@
 
     - role: geerlingguy.mailhog
       tags: website_host
+      # mailhog_binary_url: https://github.com/mailhog/MailHog/releases/download/v0.2.0/MailHog_linux_amd64
       mailhog_binary_url: file:///vagrant/MailHog_linux_amd64
       ssmtp_mailhub: "{{ smtp.host }}:{{ smtp.port }}"
 
@@ -117,11 +118,12 @@
         - name: ssh_bastion_website
           path: "/website/log/*.log"
           options:
-            - weekly
-            - size 25M
+            - daily
             - missingok
+            - rotate 14
             - compress
             - delaycompress
+            - notifempty
             - copytruncate
 
   tasks:
