--- a/vagrant/ubuntu-14.04/Vagrantfile.example
+++ b/vagrant/ubuntu-14.04/Vagrantfile.example
@@ -1,23 +1,12 @@
 
+
 Vagrant.configure(2) do |config|
   config.vm.box = "ssh_bastion_development_ubuntu-14.04"
 
   config.vm.box_url = "trusty-server-cloudimg-amd64-vagrant-disk1.box"
 
-  config.vm.network "public_network"
-
-  # puma
-  config.vm.network "forwarded_port", guest: 3000,
-                                      host: 3000, host_ip: '127.0.0.1'
-  # mailhog web ui
-  config.vm.network "forwarded_port", guest: 8025,
-                                      host: 8025, host_ip: '127.0.0.1'
-  # mailhog smtp
-  config.vm.network "forwarded_port", guest: 1025,
-                                      host: 1025, host_ip: '127.0.0.1'
-  # graylog web ui
-  config.vm.network "forwarded_port", guest: 9000,
-                                      host: 9000, host_ip: '127.0.0.1'
+  # config.vm.network "public_network"
+  config.vm.network "private_network", ip: '192.168.100.100'
 
   config.vm.synced_folder "../../website", "/website"
 
