--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -114,7 +114,7 @@
       graylog_web_listen_address: '0.0.0.0'
       graylog_web_port: 9000
       graylog_rest_listen_uri: http://0.0.0.0:12900/
-      graylog_rest_transport_uri: http://0.0.0.0:12900/
+      graylog_rest_transport_uri: "http://{{ web.ip }}:12900/"
 
     - role: nickhammond.logrotate
       tags: website_host
