--- a/ansible/roles/vkill.gpg2_key_mgr/tasks/gpg2_key.yml
+++ b/ansible/roles/vkill.gpg2_key_mgr/tasks/gpg2_key.yml
@@ -1,59 +1,74 @@
 ---
 # ref https://www.gnupg.org/documentation/manuals/gnupg/Unattended-GPG-key-generation.html
 
-- name: Ensure .gnupg config directory exists with right permissions
+- name: "Ensure {{ gpg2_key_basedir }} config directory exists with right permissions"
   file:
-    dest: "~/{{ gpg2_path }}"
+    dest: "~/{{ gpg2_key_basedir }}"
     state: directory
     mode: 0700
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
 
-- name: Ensure .gnupg/secret directory exists with right permissions
+- name: "Ensure {{ gpg2_key_basedir }}/{{ gpg2_key_path }} directory exists with right permissions"
   file:
-    dest: "~/{{ gpg2_path }}/{{ gpg2_key_path }}"
+    dest: "~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}"
     state: directory
     mode: 0700
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
 
-- name: Copy gpg2_generate_key_script
+- name: Copy gpg2_key_generate_script
   template:
-    src: "gpg2_generate_key_script"
-    dest: "~/{{ gpg2_path }}/{{ gpg2_key_path }}/generate_key_script"
+    src: "gpg2_key_generate_script"
+    dest: "~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/generate_script"
     mode: 0600
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
 
 - name: Check existing secret key
-  shell: "gpg --list-secret-keys | grep '{{ gpg2_key_unique_uid }}'"
+  shell: "gpg --list-secret-keys | grep '{{ gpg2_key_uid }}'"
   changed_when: false
   ignore_errors: true
-  register: gpg_keys
+  register: gpg2_keys
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
 
 - name: Generate new secret key
-  command: "gpg --batch --gen-key ~/{{ gpg2_path }}/{{ gpg2_key_path }}/generate_key_script chdir=~/{{ gpg2_path }}"
+  command: "gpg --batch --gen-key ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/generate_script"
+  args:
+    chdir: "~/{{ gpg2_key_basedir }}"
   become: yes
-  become_user: "{{ gpg2_user }}"
-  when: gpg_keys.stdout == ""
+  become_user: "{{ gpg2_key_user }}"
+  when: gpg2_keys.stdout == ""
 
 - name: Import generated secret key
-  command: "gpg --import ~/{{ gpg2_path }}/{{ gpg2_key_public_file }} ~/{{ gpg2_path }}/{{ gpg2_key_private_file }}"
+  command: "gpg --import ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.public }} ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.private }}"
   become: yes
-  become_user: "{{ gpg2_user }}"
-  when: gpg_keys.stdout == ""
+  become_user: "{{ gpg2_key_user }}"
+  when: gpg2_keys.stdout == ""
 
 - name: Generate secret key fingerprint file
-  shell: "gpg --fingerprint {{ gpg2_key_unique_uid }} | awk -F= '/Key fingerprint/ { gsub(/ /,\"\", $2); print $2 }' | tee ~/{{ gpg2_path }}/{{ gpg2_key_fingerprint_file }}"
+  shell: "gpg --fingerprint '{{ gpg2_key_uid }}' | awk -F= '/Key fingerprint/ { gsub(/ /,\"\", $2); print $2 }' > ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.fingerprint }}"
   changed_when: false
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
 
 - name: Generate secret key public ASCII file
-  shell: "gpg --armor --export {{ gpg2_key_unique_uid }} > ~/{{ gpg2_path }}/{{ gpg2_key_public_asc_file }}"
+  shell: "gpg --armor --export '{{ gpg2_key_uid }}' > ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.public_asc }}"
   changed_when: false
   become: yes
-  become_user: "{{ gpg2_user }}"
+  become_user: "{{ gpg2_key_user }}"
+
+- name: Generate secret key uid file
+  shell: "echo '{{ gpg2_key_uid }}' > ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.uid }}"
+  changed_when: false
+  become: yes
+  become_user: "{{ gpg2_key_user }}"
+
+# TODO
+- name: Generate secret key uid hash file
+  shell: "echo '{{ gpg2_key_uid }}' > ~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files.uid_hash }}"
+  changed_when: false
+  become: yes
+  become_user: "{{ gpg2_key_user }}"
 
